package com.dev.alan.patterns.structural.flyweight;

import java.util.HashMap;
import java.util.Map;

// Flyweight Factory

public class TreeFactory {
    private static final Map<String, TreeType> treeTypes = new HashMap<>();

    public static TreeType getTreeType(String name, String color, String texture) {
        String key = name + "-" + color + "-" + texture;
        if (!treeTypes.containsKey(key)) {
            treeTypes.put(key, new TreeTypeImpl(name, color, texture));
        }
        return treeTypes.get(key);
    }
}
